--- a/Sources/Appendix/Appendix.tex
+++ b/Sources/Appendix/Appendix.tex
@@ -1,14 +1,19 @@
 % /Sources/Results/glcm/specular/0wk-1wk-H-filter-red-oak-rgb-specular.png
+
 \begin{appendices}
-  \chapter{Appendix}
+    \begin{samepage}
+    \nopagebreak[0]
+    \unchapter{Appendix}
+    \nopagebreak[0]
   %\subsection{Specular Results - All Species}
-  \begin{sidewaysfigure}
-      \begin{center}
-          \makebox[\textwidth]{\includegraphics[scale=0.5]{/Sources/Results/glcm/specular/H-filter-all-species-rgb.png}}
-      \end{center}
-      \caption{H filter GLCM Specular - All Species}
-      \label{fig:polarization}
-  \end{sidewaysfigure}
+      \begin{figure}[h!b]
+          \begin{center}
+              \makebox{\includegraphics[angle=270,origin=c,scale=0.3]{/Sources/Results/glcm/specular/H-filter-all-species-rgb.png}}
+          \end{center}
+          \caption{H filter GLCM Specular - All Species}
+          \label{fig:polarization}
+      \end{figure}
+    \end{samepage}
   \begin{sidewaysfigure}
       \begin{center}
           \makebox[\textwidth]{\includegraphics[scale=0.5]{/Sources/Results/glcm/specular/V-filter-all-species-rgb.png}}
