--- a/Sources/Background/Nature_of_Light/Nature_of_Light.tex
+++ b/Sources/Background/Nature_of_Light/Nature_of_Light.tex
@@ -12,7 +12,7 @@ Light is fundamental to life.  In Maxwell’s’ theory on light he explained ho
 \end{figure}
 Different frequencies of light correspond to different colors on the visible spectrum.  These waves are made up of two parts, the electric and magnetic.  Due to their similar nature often only the electrical portion is considered at first for mathematical simplicity.
 
-The electrical portion of EM waves, and the only portion considered here, can be described as the sum of two sinusoidal waves representing the orthogonal x and y components in Cartesian space.
+The electrical portion of EM waves, and the only portion considered here, can be described as the sum of two sinusoidal waves representing the orthogonal $x$ and $y$ components in Cartesian space.
 %
 \begin{align}
     E(z,t)=E_x (t)+E_y (t)\\
@@ -20,11 +20,11 @@ The electrical portion of EM waves, and the only portion considered here, can be
     E_y (t)=E_{0y} cos( \theta+\delta_y )
 \end{align}
 %
-where $ \theta = \omega t-kz $ is the wave propagator that determines the frequency and direction of propagation for the wave. $\delta_y$ and $\delta_x $ represent the phase delay for each component of the wave.
+where $ \theta = \omega t-kz $ and is the wave propagator that determines the frequency and direction of propagation for the wave. $\delta_y$ and $\delta_x $ represent the phase delay for each component of the wave.
 
-When more than one sine wave is considered, as in the case of EM waves, an overall phase delay between the them is considered and represented as $ \delta=\delta_y-\delta_x $. $E_{0x}$ and $E_{0y}$ represent the amplitudes of the sinusoidal wave in the $x$ and $y$ direction.
+When more than one sine wave is considered, as in the case of EM waves, an overall phase delay between them is considered and represented as $ \delta=\delta_y-\delta_x $. $E_{0x}$ and $E_{0y}$ represent the amplitudes of the sinusoidal wave in the $x$ and $y$ direction.
 
-Light can also be viewed as packets of energy known as photons.  The energy of photons is related to its frequency $v$ and a constant, known as Planck’s constant $h$ \cite{ecophysiology}.
+Light can also be viewed as packets of energy known as photons.  The energy of a photon is related to its frequency $v$ and a constant, known as Planck’s constant $h$ \cite{ecophysiology}.
 %
 \begin{align}
 	h=6.62\times10^{-34} [m^2 kg/s]\\
