--- a/Sources/Background/Nature_of_Light/Polarization_of_EM_Waves.tex
+++ b/Sources/Background/Nature_of_Light/Polarization_of_EM_Waves.tex
@@ -5,7 +5,7 @@ The polarization of EM waves is determined, for monochromatic frequencies, by th
 
 In its most general form, the polarization is referred to as being elliptical, and its $x$ and $y$ amplitudes, and phase delay can be described in the form of the polarization ellipse.
 
-It has been shown that the form of the polarization ellipse can be derived from the solution to the plane wave equation for the electromagnetic wave.  Using the relationships defined in the previous section and defining,
+It has been shown that the form of the polarization ellipse can be derived from the solution to the plane wave equation for the electromagnetic wave.  Using the relationships defined in $2.1-2.3$ in the previous section and defining,
 %
 \begin{align}
     \tau=\omega t-kz+\delta_x
@@ -80,13 +80,13 @@ and similarly
 	<E_x (t) E_y (t)>  =  \frac{1}{2} E_{0x} E_{0y} cos(\delta)
 \end{align}
 %
-substitution into equation and completing the square results in
+substitution into equation $2.15$ and completing the square results in
 %
 \begin{align}
     (E_{0x}^2+E_{0x}^2 )^2-(E_{0x}^2-E_{0x}^2 )^2-(2E_{0x}^2 E_{0x}^2  cos(\delta) )^2=(2E_{0x} E_{0y}  sin(\delta))^2
 \end{align}
 %
-The terms of this equation represent the polarization state of a wave in relation to the x and y intensities and relative phase delay between the two components.
+The terms of this equation represent the polarization state of a wave in relation to the $x$ and $y$ intensities and relative phase delay between the two components.
 These quantities are known as the Stokes parameters and describe the state of polarization and are often represented as a vector,
 %
 \begin{align}
@@ -112,7 +112,7 @@ The degree of polarization for an EM wave is the magnitude of the Stokes vector 
     \alpha =DOP=  \frac{\sqrt{S_1^2+S_2^2+S_3^2 }}{S_0}
 \end{align}
 %
-and ranges from zero for unpolarized light, to one for completely polarized light.  It is possible to show the polarized and unpolarized intensities as individual components
+and ranges from zero for unpolarized light, to one for completely polarized light.  It is possible to show the polarized ($S_P$) and unpolarized ($S_U$) intensities as individual components
 summed together as
 %
 \begin{align}
@@ -132,7 +132,7 @@ summed together as
     \end{bmatrix}
 \end{align}
 %
-The degree of polarization for the linear (DOLP) and circular polarization (DOCP) can specifically be quantified as
+The degree of polarization for the linear ($DOLP$) and circular ($DOCP$) polarization components can specifically be quantified as
 %
 \begin{align}
     DOLP=  \frac{\sqrt{S_1^2+S_2^2 }}{S_0} \\
