--- a/Sources/Background/Remote_Sensing/Polarization.tex
+++ b/Sources/Background/Remote_Sensing/Polarization.tex
@@ -2,6 +2,6 @@
 \subsection{Polarization of Light from Leaves}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
-An increase in the reflectance of light off the surface of a leaf, as it reflects wavelengths it would normally use for photosynthesis, allows for the polarization response of the leaf to be observed.  As stated in \cite{photonvegetation} “Polarization provides the capability to separate light scattered by the leaf mesophyll from light scattered by the air-cuticle surface”.  Specular reflections, that occur at the Brewster angle provide information on the topology of leaf surfaces.  Leaves are not optically smooth and therefore the typical application of Fresnel’s equations for reflection and transmission must be extended to handle rough surfaces. BRDF models have been extended to include the polarization of light matter interactions on the on incident irradiance.  These models are known as polarimetric Bi-directional Distribution Function (pBRDF).  A pBRDF model adapted for leaf surfaces can be found in \cite{photonvegetation}.
+The reflectance of light from the surface of a leaf is higher for frequencies that are not as important to the photosynthetic process. These reflections allow for the polarization response of the leaf to be observed.  As stated in \cite{photonvegetation} “Polarization provides the capability to separate light scattered by the leaf mesophyll from light scattered by the air-cuticle surface”.  Specular reflections, that occur at the Brewster angle provide information on the topology of leaf surfaces.  Leaves are not optically smooth and therefore the typical application of Fresnel’s equations for reflection and transmission must be extended to handle rough surfaces. BRDF models have been extended to include the polarization of light matter interactions on the on incident irradiance.  These models are known as polarimetric Bi-directional Distribution Function (pBRDF).  A pBRDF model adapted for leaf surfaces can be found in \cite{photonvegetation}.
 
-The specular component is sometimes so bright that it can make an entire canopy appear white to the observer.  This portion is usually highly polarized and tells of the surface topology of the leaves \cite{vanderbilt}.  The diffuse component is often assumed to be randomly polarized although our results show there is potential to discriminate with diffuse polarization.
+The specular component is sometimes so bright that it can make an entire canopy appear white to the observer.  This portion is usually highly polarized and tells of the surface topology of the leaves \cite{vanderbilt}.  The diffuse component is often assumed to be randomly polarized although our results show there is potential to discriminate between species by observing this component.
