--- a/Sources/Background/Remote_Sensing/Reflection_Transmission.tex
+++ b/Sources/Background/Remote_Sensing/Reflection_Transmission.tex
@@ -2,8 +2,8 @@
 \subsection{Reflection and Transmission of Light and Leaves}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
-The reflectance of light off of a leaf is dependent on many different factors.  As plants undergo stressful conditions, their reflectance and transmittances change.  In general, as photosynthetic activity decreases, the reflection off the surface increases.  As a result there is also less transmission.  The growth stage of the leaf is also important as younger leaves have not fully developed all of the internal complex structures.  As the number of complex structures increases, there is an increase in the number of air wax interfaces to cause more randomized reflection and refraction \cite{photonvegetation}.
+The reflectance of light from the surface of a leaf is dependent on many different factors.  As plants are subjected to stressful conditions, their reflectance and transmittances change.  In general, as photosynthetic activity decreases, the reflection from the surface increases.  As a result there is also less transmission.  The growth stage of the leaf is also important as younger leaves have not fully developed all of their complex internal structures.  As the number of complex structures increases, there is an increase in the number of air wax interfaces to cause more randomized reflection and refraction \cite{photonvegetation}.
 
 Leaves that succumb to disease also may become deformed and further alter the response recorded from the canopy layer.
 
-It has been shown \cite{grant}, \cite{specularbrdf} that leaves are not purely diffuse or purely specular reflectors of light.  Their response is best modeled as a combination of both components.
+It has been shown \cite{grant}, \cite{specularbrdf} that leaves are not purely diffuse or purely specular reflectors of light.  Their response is best modeled when a combination of both components is considered.
