--- a/Sources/Background/Texture_and_Tone/GLCM.tex
+++ b/Sources/Background/Texture_and_Tone/GLCM.tex
@@ -124,7 +124,7 @@ If a the GLCM is symmetric, the x and y means and variances are equal and the eq
     Corr = \sum_{i=0}^{N-1}\sum_{j=0}^{N-1}(\frac{(i-\mu)(j-\mu)}{\sigma^2})
 \end{align}
 %
-Measures of orderliness are quantified by the amount of entropy and energy within an image.  Entropy is a measure of randomness in a system.  In thermodynamics, it is the heat lost when a reaction occurs and hence is a measure of disorder.  Energy is a measure of useful work that can occur due to the non random nature of the energy in a system.  So for an image, higher randomness in the grey level tones of neighboring pixels results in a higher amount of entropy for the GLCM matrix associated with the image.
+Measures of orderliness are quantified by the amount of entropy and energy within an image.  Entropy is a measure of randomness in a system.  In thermodynamics, it is the recorded heat lost when a reaction occurs; a measure of disorder.  Energy is a measure of useful work that can occur due to the non random nature of the energy in a system.  So for an image, higher randomness in the grey level tones of neighboring pixels results in a higher amount of entropy for the GLCM matrix associated with the image.
 
 The angular second moment (ASM) describes the amount of “inertia” around a pixel neighbor relationship and is defined as,
 %
