--- a/Sources/Background/Texture_and_Tone/Texture_and_Tone.tex
+++ b/Sources/Background/Texture_and_Tone/Texture_and_Tone.tex
@@ -4,7 +4,7 @@
 
 “When small image areas from black and white photographs are independently processed by a machine, then texture and tone are most important” \cite{haralick}.  Without tone there is no texture, as texture is created when there are certain frequencies of tonal change in an image \cite{remotesensing}.
 
-A surface texture is classified according to the scale at which the human eye can see.  It is import to determine the appropriate scale for a particular surface, when talking about its texture.  A surface's ability to appear smooth or rough in an image is determined by the spatial frequency distribution of grey level pixel intensities in a greyscale image and the various shades of grey tones.  The nature of light reflecting from surfaces of materials is also largely due to how rough or smooth the surface is.  Imaging devices are able to pick up pixel by pixel surface interactions in their large field of view.  Cameras are able to detect multiple scattering mechanisms for analysis in material classification problems.
+A surface texture is classified according to the scale at which the human eye or optical device can render.  It is import to determine the appropriate scale for a particular surface, when talking about its texture.  A surface's ability to appear smooth or rough in an image is determined by the spatial frequency distribution of grey level pixel intensities in a greyscale image and the various shades of grey tones.  The nature of light reflecting from surfaces of materials is also largely due to how rough or smooth the surface is.  Imaging devices are able to pick up pixel by pixel surface interactions in their large field of view.  Cameras are able to detect multiple scattering mechanisms for analysis in material classification problems.
 
 Tone is related to texture and is the grey level gradients distributed across an image.  It is the “relative brightness or color of objects on an image” \cite{remotesensing}.  If an image has no differences in tone, then the texture and other features are indiscernible.
 
