--- a/Sources/Conclusion/Conclusion.tex
+++ b/Sources/Conclusion/Conclusion.tex
@@ -11,22 +11,24 @@
   \vspace{0.5cm}
 \end{center}
 
-The need for precisely monitoring the health of vegetation as resources become more scare will become a necessity for human survival. The sensing technologies involved with satellites, drones, and indoor greenhouses  provide information the first steps in technologies towards understanding photon vegetation interactions.  Understanding the processes involved and influenced by these interactions allows for the potential to gain deeper understanding into the data we acquire.
+The need for precisely monitoring the health of vegetation will grow as resources become more scarce.  Precision agricultural will become a necessity for human survival. The sensing technologies involved with satellites, drones, and indoor greenhouses provide information that contribute to our understanding of photon vegetation interactions. Information captured by these sensors occur at numerous scales. Understanding the micro and macro level effects involved with these interactions allow for the potential to gain deeper understanding into the natural world around us. The data acquired is useful for determining the physiological status of plants in different environments under low resource conditions. Lower resources will require a decrease in the wasting of inputs involved with producing food and other agricultural outputs.
 
-The initial assumption of the diffuse portion of light being an unpolarized scattering mechanism is starting to give way with new experimentation and research into the properties of this interaction with a wide variety of materials and substances showing there is information to be gained in observing the polarization in the diffuse portion.  Texture has been used in remote sensing technologies for the purpose of classifying the various areas within an image.  The inclination to bring these ideas to micro scale agricultural systems in greenhouses throughout the solar system can be useful going forward as interest in this field grows.
-
-This research has set a foundation for a discussion surrounding the information to be gained from observing the polarization response that results from incident unpolarized light onto a leafs surface. Images were acquired with plants in various physiological conditions, including decomposition and water stress.  The texture of the leafs' surface was observed to change as these processes progressed.
-
-The polarization created by a material when unpolarized light is incident, as in most natural settings, has been shown to reveal distinguishing characteristics for determining both the species and physiological state of vegetation.  Although normally assumed to be unpolarized, the diffuse portion of reflectance contains information that can be useful for classification and plant health analysis.  The specular portion of light also contains distinguishing information and in our results provided better classification.
+A large amount of research previously conducted has focused on large scale imaging techniques for analyzing data acquired from satellites and drones.  Texture has been used in remote sensing technologies for the purpose of classifying the various terrains and structures within an image.  The inclination to bring these ideas to microscale agricultural systems in greenhouses throughout the solar system can be useful going forward as interest in this field grows.  The complexity of the microscale interactions today is largely ignored.  As models have a need to grow in realization and complexity their will be a need to explain the nuances of the macro level data.  Small scale data acquisition and analysis is critical for understanding these effects.
 
 As areas in precision agriculture expand into areas of indoor growing operations in more controlled environments, the application of precise amounts of agricultural inputs will become more viable.  A better understanding of the effects of light on individual plants for determining their overall health will be useful in the future as resources become more scarce.
 
-Results for Red Oak have been provided in detail for this report as it provides the simplest explanation for the results.  Each species provides slightly different results depending on its composition.  Further explanation would have to be given at an individual species level to account for these results.
+This research has set a foundation for discussion surrounding the information to be gained from observing the polarization response, at a micro level, that results from incident unpolarized light onto a leafs surface.  This type of interaction is found naturally but for controlled, experimental purposes is created in a lab setting. Images were acquired with plants in various physiological conditions including decomposition and water stress.  As these conditions change, the physiology of each leaf on the plant also change.  Cellular structures begin to break down and influence the polarization of the reflected radiation.  The texture of the leafs surface was also observed to change as these processes progressed.
 
-The relative water content of leaves is shown to be correlated with both its texture and polarization response when captured by a digital microscope behind a rotating linear polarizer.
+The polarization created by a material when unpolarized light is incident, as in most natural settings, has been shown to reveal distinguishing characteristics for determining both the species and physiological state of vegetation.  Although normally assumed to be unpolarized, the diffuse portion of reflectance contains information that can be useful for classification and plant health analysis.  The specular portion of light also contains distinguishing information and in our results provided better classification.
 
-Further improvements to experiment design, plant health status control, image acquisition and segmentation should be taken to improve the results of regression.  Plants can be controlled at a finer level when grown by starting seeds from scratch in a controlled environment.  Inputs to each individual plant could be altered including various fertilizers and water amounts.  Paper chromatography methodologies,as discussed in \cite{pigments} could be used for determining the various distribution of pigments throughout smaller subsections of the leaves.  By creating false images with polarization and texture information, smaller sections of leaves could be isolated and correlated with each feature.  Image acquisition could be improved by reducing the amount of undulations on a leafs surface, in order to reduce the amount of effects that arise from masking and shadowing.  Different light sources should be investigated to determine the consistency of our results.  Image segmentation may prove beneficial to isolating the effects of localized features.  Physiological indicators, such as pigment concentrations, in addition to relative water content should be investigated to further show health status and correlate the polarization response.
+The initial assumption of the diffuse portion of light being an unpolarized, scattering mechanism has been recognized in recent years as being a simplification of the scattering mechanisms.  It is akin to assuming the specular portion is completely polarized; an idealization and not an observation.  New experimentation and research into the diffuse reflectance of a wide variety of materials and substances shows that information collected contains insight into the properties of these materials. These properties are shown to be useful for classification and staging purposes.
+
+The relative water content of leaves is shown to be correlated with both its texture and polarization response when captured by a digital microscope behind a rotating linear polarizer. Results for Red Oak have been provided in detail for this report as it provides the simplest explanation for the results.  Each species provides slightly different results depending on its composition.  Further explanation would have to be given at an individual species level to account for these results.
+
+Further improvements to experiment design, plant health status control, image acquisition and segmentation should be taken to improve the results of regression.  Plants can be controlled at a finer level when grown by starting seeds in a controlled environment.  Inputs to each individual plant could be altered including various fertilizers and water amounts.  Paper chromatography methodologies, as discussed in \cite{pigments}, could be used for determining the various distribution of pigments throughout smaller subsections of the leaves.  By creating false images with polarization and texture information, smaller sections of leaves could be isolated and correlated with each feature.  Image acquisition could be improved by reducing the amount of undulations on a leafs' surface in order to reduce the number of effects that arise from masking and shadowing.  Different light sources should be investigated to determine the consistency of our results.  Image segmentation may prove beneficial in isolating the effects of localized features.  Physiological indicators such as pigment concentrations in addition to relative water content should be investigated to further show health status and correlate the polarization response.
 
 In the area of polarization and texture modeling, examples could be given as to how various textures, such as sandpaper, glass, etc. are related to their polarization response in a simplistic model.
 
-Overall this study has provided a basis for many of the principles required for understanding the micro scale concepts involved with the sensing of vegetation. Improvements to current models and suggestions for areas of further study, have been provided.
+Overall this study has provided a basis for many of the principles required for understanding the microscale concepts involved with the sensing of vegetation. Improvements to current models and suggestions for areas of further study have been provided.
+\\
+It is not the man that lives on, but the mold.
