--- a/Sources/Introduction.tex
+++ b/Sources/Introduction.tex
@@ -23,13 +23,13 @@ Remote sensing in particular has had a tremendous impact on precision agricultur
 
 When interpreting data of remotely sensed vegetation, it is important to understand the scattering mechanisms inherent to the various features found within a particular image.  This includes scattering from background objects such as soil, man made objects, canopies, etc. as well as target objects such as crops. Canopies are made up of individual leaves.  The scattering mechanisms that occur from each leaf can provide an increased insight into the larger effects evident in canopies. More precise models can then be created for the purpose of extrapolating micro level effects to the macro level.
 
-Furthermore, as more agricultural operations move indoors, information acquired from cameras monitoring these greenhouses can provide insights into the health and growth stages of various crops. Research into building greenhouses in space for the colonization of other planets, has grown substantially recently, with programs such as SpaceX looking into the possibility of placing a greenhouse on Mars.  This provides an opportunity for utilizing image sensors into confined growing areas for monitoring plants on a micro scale.
+Furthermore, as more agricultural operations move indoors, information acquired from cameras monitoring these greenhouses can provide insights into the health and growth stages of various crops. Research into building greenhouses in space for the colonization of other planets, has grown substantially recently, with programs such as SpaceX looking into the possibility of placing a greenhouse on Mars.  This provides an opportunity for utilizing image sensors in confined growing areas for monitoring plants on a micro scale.
 
 Vegetation indices (VI) have been created for quantifying the health of land plants from remotely sensed data.  These indices rely on the spectral signatures exhibited by plants that vary with the state of a vegetation’s health \cite{remotesensing}.  It is possible that these ideas can be applied to smaller scale indoor scenarios as well.
 
 Additional image processing can result in texture features being extracted from images for the purposes of segmentation and texture based classification.  It has been found that certain materials when captured from satellites and other airborne imaging devices, exhibit texture signatures that can be useful for these purposes \cite{seaice}.
 
-Machine learning techniques have been applied to a large number of different research areas.  Their usefulness for classification and regression problems in the agricultural and environmental fields has been demonstrated for the purposes of plant disease detection and prevention, plant discrimination, levee management, etc. \cite{mississippi}, \cite{plantdiscrimination}, \cite{plantvirus}, \cite{recognitionplants}, \cite{laserplants}.
+Machine learning techniques have been applied to a large number of research areas.  Their usefulness for classification and regression problems in the agricultural and environmental fields has been demonstrated for the purposes of plant disease detection and prevention, plant discrimination, levee management, etc. \cite{mississippi}, \cite{plantdiscrimination}, \cite{plantvirus}, \cite{recognitionplants}, \cite{laserplants}.
 
 As consumer drones have entered the marketplace, it has become more reasonable for smaller scale farmers to utilize these remote sensors for monitoring there fields.  Consumer off the shelf (COTS) cameras have also decreased in price, allowing for cheap installation and modification for the purpose of agricultural monitoring at different scales.
 
