--- a/Sources/Background/Nature_of_Light/Reflection_Transmission.tex
+++ b/Sources/Background/Nature_of_Light/Reflection_Transmission.tex
@@ -4,7 +4,7 @@
 
 When light interacts with two materials that have different indexes of refraction, the incident beam is reflected and transmitted according to Fresnel’s equations.
 
-The law of reflection states
+The law of reflection states that the transmission angle of the reflected beam will be equal to the angle of the reflected beam in relation to the Z axis.
 %
 \begin{align}
     \theta_i = \theta_r
@@ -13,9 +13,10 @@ The law of reflection states
 The transmission is derived directly from Snells equation,
 %
 \begin{align}
-    n_1sin(\theta_i) = n_2sin(\theta_2)
+    n_1sin(\theta_1) = n_2sin(\theta_2)
 \end{align}
 %
+% TODO: add snells equation graph here
 Note that part of the transmitted spectra may be absorbed, although this is not considered in these equations.
 
 Two main scenarios are often presented when demonstrating the principles which guide the reflected and transmitted rays; when the incident electromagnetic wave is polarized perpendicular to the plane of incidence, and when the wave is polarized parallel to it.  The perpendicular polarized wave is often denoted S or TE for transverse electric, while the parallel scenario is often denoted P or TM for transverse magnetic.
