--- a/Sources/Background/Plant_Physiology/RWC.tex
+++ b/Sources/Background/Plant_Physiology/RWC.tex
@@ -1,7 +1,7 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \subsection{Relative Water Content}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-The Relative Water Content (RWC) of a leaf is a measure of the current water level based on the total leaf water retaining capacity.  It is a useful measure of the water balance within a plant as it expresses the absolute amount of current water in a plant in proportion to the minimum amount of water it can hold.
+The Relative Water Content (RWC) of a leaf is a measure of the current water level based on the total leaf water retaining capacity.  It is a useful measure of the water balance within a plant as it expresses the absolute amount of water currently held within a plant leaf expressed as a percentage.
 
 Water makes up over 90\% of the mass of a leaf, and although RWC provides a good indicator of plant health and water capacity, it is highly dependent on the age and maturity of the leaf.  It should also be taken into consideration that leaves can also be very heterogeneous and contain a variety of complex structures in different stages of growth within each individual leaf.
 
@@ -24,8 +24,8 @@ Correlations between the RWC and other physiological responses have been found i
   \label{tab:Packages}
 \end{table}
 
-“An increase in reflectance…is not directly related to water content but indirectly, since a decrease in water content can lead to an increase in internal lead air space or cell breakdown which may increase reflectance and decrease transmittance \cite{photonvegetation}”.
+“An increase in reflectance…is not directly related to water content but indirectly, since a decrease in water content can lead to an increase in internal leaf air space or cell breakdown which may increase reflectance and decrease transmittance \cite{photonvegetation}”.
 
-This increase in internal air space leads to multiple scattering at air wax boundaries, and creates differences in the reflection and transmission of light, absorption, and the $S1$ and $S2$ Stokes parameters of the polarization response.
+This increase in internal air space leads to multiple scattering at air wax boundaries, and creates differences in the reflection, transmission and absorption of light, and the $S1$ and $S2$ Stokes parameters of the polarization response.
 
 Field measurements of the physiological properties of plants are time consuming and error prone.  It is therefore beneficial to pursue solutions to quantifying these metrics in large area field measurements.
